--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.enzdev.ideangxtranslateautocomplete
-pluginName = idea-ngx-translate-autocomplete
+pluginGroup = fr.enzomallard.ngxtranslatetoolset
+pluginName = NgTranslate Toolset
 pluginVersion = 0.0.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 202
-pluginUntilBuild = 211.*
+pluginUntilBuild = 212.*
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
@@ -20,7 +20,7 @@ platformDownloadSources = true
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = JavaScriptLanguage, AngularJS:211.7142.41
+platformPlugins = JavaScriptLanguage, AngularJS
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
