--- a/src/main/resources/messages/NgTranslateToolsetBundle.properties
+++ b/src/main/resources/messages/NgTranslateToolsetBundle.properties
@@ -1,4 +1,15 @@
 name=NgTranslate Toolset
-translation_leaf=Translation
-translation_key_node=Partial translation key
-translation_key_leaf=Translation key
+ui.translation_leaf=Translation
+ui.translation_key_node=Partial translation key
+ui.translation_key_leaf=Translation key
+
+
+
+configuration.label.translation_folder=Translation folder
+configuration.label.default_translation=Displayed translation
+
+configuration.modal.title.translation_folder=Translation Folder
+configuration.modal.title.default_translation=Displayed Translation
+
+configuration.modal.description.translation_folder=Select the folder used to store translations
+configuration.modal.description.default_translation=Select the translation to show in the IDE
