--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ pluginUntilBuild = 212.*
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
-pluginVerifierIdeVersions = 2020.2.4, 2020.3.4, 2021.1.2
+pluginVerifierIdeVersions = IU-2020.2.4, IU-2020.3.4, IU-2021.1.2
 
 platformType = IU
 platformVersion = 2021.1.2
@@ -24,4 +24,4 @@ platformPlugins = JavaScriptLanguage, AngularJS
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
-kotlin.stdlib.default.dependency = false
+kotlin.stdlib.default.dependency = true
