--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,7 @@
 
 pluginGroup = com.github.enzdev.ideangxtranslateautocomplete
 pluginName = idea-ngx-translate-autocomplete
-# SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 0.1.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
@@ -12,12 +11,12 @@ pluginSinceBuild = 203
 pluginUntilBuild = 213.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType = IC
-platformVersion = 2020.3.4
+platformType = IU
+platformVersion = 2021.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = JavaScript, AngularJS
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
 javaVersion = 11
@@ -28,4 +27,4 @@ gradleVersion = 7.3
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
-kotlin.stdlib.default.dependency = false
+kotlin.stdlib.default.dependency = true
