chore(deps): Update dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ pluginGroup = com.github.enzdev.ideangxtranslateautocomplete
 pluginName = idea-ngx-translate-autocomplete
 pluginVersion = 0.1.4
 
+pluginRepositoryUrl = https://plugins.jetbrains.com/plugin/17450-ngtranslate-toolset
+
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 223
