--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ pluginRepositoryUrl = https://plugins.jetbrains.com/plugin/17450-ngtranslate-too
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 223
-pluginUntilBuild = 231.*
+pluginUntilBuild = 232.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IU
@@ -24,7 +24,14 @@ platformPlugins = JavaScript, AngularJS
 javaVersion = 17
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.5.1
+gradleVersion = 8.2.1
 
-org.gradle.unsafe.configuration-cache = true
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+org.gradle.configuration-cache = true
 kotlin.stdlib.default.dependency = true
+
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching = true
+
+# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
+systemProp.org.gradle.unsafe.kotlin.assignment = true
