Migrate to IntelliJ Platform Gradle Plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,14 @@ pluginRepositoryUrl = https://plugins.jetbrains.com/plugin/17450-ngtranslate-too
 pluginSinceBuild = 223
 pluginUntilBuild = 241.*
 
-# IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html#custom-target-platforms
 platformType = IU
 platformVersion = 2023.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = JavaScript, AngularJS
+platformPlugins =
+platformBundledPlugins = JavaScript, AngularJS
 
 # Java language level used to compile sources and to generate the files for - Java 17 is required since 2022.2
 javaVersion = 17
