--- a/gradle.properties
+++ b/gradle.properties
@@ -3,28 +3,29 @@
 
 pluginGroup = com.github.enzdev.ideangxtranslateautocomplete
 pluginName = idea-ngx-translate-autocomplete
-pluginVersion = 0.1.8
+pluginVersion = 0.1.9
 
 pluginRepositoryUrl = https://plugins.jetbrains.com/plugin/17450-ngtranslate-toolset
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 223
-pluginUntilBuild = 241.*
+pluginSinceBuild = 242
+pluginUntilBuild = 243.*
 
-# IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html#custom-target-platforms
 platformType = IU
-platformVersion = 2023.1
+platformVersion = 2024.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = JavaScript, AngularJS
+platformPlugins =
+platformBundledPlugins = JavaScript, AngularJS
 
 # Java language level used to compile sources and to generate the files for - Java 17 is required since 2022.2
-javaVersion = 17
+javaVersion = 21
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.2.1
+gradleVersion = 8.10.2
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.configuration-cache = true
