--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ pluginRepositoryUrl = https://plugins.jetbrains.com/plugin/17450-ngtranslate-too
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 242
+pluginSinceBuild = 241
 pluginUntilBuild = 243.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html#custom-target-platforms
@@ -22,11 +22,11 @@ platformPlugins =
 platformBundledPlugins = JavaScript, AngularJS
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.10.2
+gradleVersion = 8.11.1
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.configuration-cache = true
-kotlin.stdlib.default.dependency = true
+kotlin.stdlib.default.dependency = false
 
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching = true
